changed fonts, fixed button alignment, card spacing

--- a/Responsive-Portfolio1/css/style.css
+++ b/Responsive-Portfolio1/css/style.css
@@ -1,8 +1,7 @@
-/* body{
+body{
+    font-family: Martel, Arial, sans-serif;
     background-image: url("images/ignasi_pattern_s.png");
-    line-height: 200%;
-    margin:0px;
-} */
+}
 p {
     line-height: 200%;
 }
@@ -20,4 +19,10 @@ div.col-sm-8 {
 .navbar-brand {
     height: 70px;
     font-size: 30px;
+}
+.pug-img{
+    height:208px;
+}
+.swirl-card {
+    margin-top: 120px;
 }
